Comiteando para ver si funciona

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
+<header>
 
+</header>
   Get Started
 
   Maximize skill, minimize budget
